--- a/mpgame.vcxproj
+++ b/mpgame.vcxproj
@@ -204,6 +204,9 @@
       <BaseAddress>0x20000000</BaseAddress>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
+    <PostBuildEvent>
+      <Command>call "$(ProjectDir)postcompile.cmd</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="mpgame\Actor.cpp" />
